header-img spacing fix

--- a/css/index.css
+++ b/css/index.css
@@ -209,7 +209,7 @@ img {
 }
 .home .homepage-header-img {
   height: 200px;
-  margin-top: 101px;
+  margin-top: 100px;
   margin-bottom: 20px;
   width: 100%;
 }
@@ -270,9 +270,6 @@ img {
   border-radius: 10px;
 }
 @media (max-width:500px) {
-  .home .homepage-header-img {
-    margin-top: 100px;
-  }
   .home .middle-launch-images .sky-img,
   .home .middle-launch-images .launch-img {
     display: none;
