--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,7 +2,7 @@
 .home {
     .homepage-header-img{
       height: 200px;
-      .margin-tb(101px, 20px);
+      .margin-tb(100px, 20px);
       width: @width-100percent;
     }
     .content-section{
@@ -43,9 +43,6 @@
 
 @media @phone{
     .home{
-        .homepage-header-img {
-            margin-top: 100px;
-        }
         .middle-launch-images{
             .sky-img, .launch-img{
                 display: none;
